revert back to vmin solution for medium device to have decent size on mobile, too big on ipad. To really fix this, need complete CSS rewrite

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -57,23 +57,11 @@
   margin-right: -0.05em;
 }
 
-@media only screen and (max-width: 1023px) {
-     h2 {
-       font-size: 1.4rem;
-     }
-
-     h3 {
-       font-size: 1.2rem;
-     }
-     p {
-       font-size: 0.8rem;
-     }
-}
-
 @media #{$medium-only} {
   body,html {
     // previously 4vmin, but that got too large
-    font-size: 26px;
+    // font-size: 26px;
+    font-size: 4.5vmin;
   }
   #logo {
     width: 70vmin;
